# youtube-comment-reader

./: pyproject.toml
src/youtube_comment_reader/: __init__.py  read_all.py  reader.py
